--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ background:#ccc;
 <h4>Network</h4>
 <div><span style="background-color: #c8ddf0"></span>Reference</div>
 <div><span style="background-color: #73b3d8"></span>Model 3</div>
-<div><span style="background-color: #08306b"></span>Speed Pedelec1</div>
+<div><span style="background-color: #08306b"></span>Speed Pedelec</div>
 
 
 </div>
