--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body { margin: 0; padding: 0;font-family: Tahoma,sans-serif; }
 background-color: #fff;
 border-radius: 3px;
 box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-font: Tahoma, sans-serif ;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 padding: 10px;
 position: relative;
 top: 200px;
