--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 padding: 10px;
 position: relative;
-top: 200px;
-
+top: 10px;
 opacity: 90%;
-
 z-index: 2;
-
-width:700px; margin-left:auto; margin-right:auto; border:1px solid #ddd; padding:10px;
+width:auto;
+max-width: 700px;  margin-left:auto; margin-right:auto;margin-top: auto;margin-bottom: auto; border:1px solid #ddd; padding:10px;
+overflow: auto; 
+-webkit-overflow-scrolling: touch;
 
 }
 .legend {
@@ -63,9 +63,9 @@ width: 10px;
 
 #close {
 
-position: relative;
-bottom: 350px;
-right:-680px;
+position: absolute;
+top: 4px;
+right:4px;
 display:inline-block;
 padding:2px 5px;
 background:#ccc;
@@ -84,7 +84,9 @@ background:#ccc;
 
 </div>
 
-<div id="map"></div>
+<div id="map">
+  
+</div>
 
 
 
@@ -100,7 +102,7 @@ background:#ccc;
  
 </div>
 
- <div id=des><p style='font-size: 23px;text-align: center;'><b>Accessibility of Bike Networks in Amsterdam</b>
+<div id=des><p style='font-size: 24px;text-align: center;'><b>Accessibility of Bike Networks in Amsterdam</b>
   <p style="font-size: 14px;">What are the benefits to creating new bike infrastructure in Amsterdam? This project set out to determine what the impact would be between different bike network options in the Metropolitan Region of Amsterdam. For this work we cooperated with the municipality to identify and model missing bike links in the region. In addition, we analyzed the current bike network and determined where upgrades were necessary for a more safe and efficient regional bike network.<br><br> This analysis contains three models: Reference, Model3 and Speed PedelEc. The Reference Model, is the network as it currently is with no changes. Model 3 is the current network with identified missing links added and speeds increased on regional and urban ‘bike highways’ to simulate upgrades to the network. The last model tested, Speed PedelEc (SP), is the same as Model 3, but with upgrades on specific links in the network that would allow 35 km/h travel via electric bikes.
   <br> 
   <br>
@@ -108,6 +110,7 @@ background:#ccc;
   
   <span id='close' onclick="d3.select('#des').style('z-index',-1)">x</span>
  </div>
+
 <script>
 
 
